--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/gridfinity-favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>gridfinity-space-optimizer</title>
-  <meta name="description" content="GPT Engineer Generated Project" />
-  <meta name="author" content="GPT Engineer" />
-  <meta property="og:image" content="/og-image.svg" />
+  <title>Gridfinity Layout</title>
+  <meta name="description" content="Calculate optimal Gridfinity storage layouts for your drawers" />
+  <meta name="author" content="ntindle + Claude" />
+  <meta property="og:image" content="/gridfinity-favicon.svg" />
 </head>
 
 <body>
