--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <meta name="description" content="Calculate optimal Gridfinity storage layouts for your drawers" />
   <meta name="author" content="ntindle + Claude" />
   <meta property="og:image" content="/gridfinity-favicon.svg" />
+  <link rel="canonical" href="https://gridfinity-space-optimizer.com/" />
+  <meta name="robots" content="index, follow" />
 </head>
 
 <body>
